Add footer and last updated

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     </div>
     <div>
         <p>
-            I'm currently pursuing my graduate studies in computer science at the Kahlert School of Computing,
-            University of Utah. Under the guidance of Prof. Vijay Nagarajan, my research focuses on re-imagining
-            applications on CXL Memory. Additionally, I serve as a teaching assistant, supporting senior
-            undergraduate students in their Capstone Project. My research interest lies in the intersection of
-            hardware/software and multi-node systems, i.e., computer architecture, operating
+            I'm currently pursuing my graduate studies in computer science at the
+            <a target="_blank" href="https://www.cs.utah.edu">Kahlert School of Computing</a>,
+            <a target="_blank" href="https://www.utah.edu">University of Utah</a>. Under the guidance of
+            <a target="_blank" href="https://users.cs.utah.edu/~vijay/index.html">Prof. Vijay Nagarajan</a>,
+            my research focuses on re-imagining applications on CXL Memory. Additionally, I serve as a teaching
+            assistant, supporting senior undergraduate students in their Capstone Project. My research interest lies in
+            the intersection of hardware/software and multi-node systems, i.e., computer architecture, operating
             systems, and distributed systems.
         </p>
         <p>
@@ -35,21 +37,29 @@
                 Cloud & Compute</a> Team at <a href="https://www.cisco.com">Cisco Systems</a> in Bangalore, India. I
             started as a college intern and progressed to the role of Software Engineer 2 before leaving. During my time
             there, I worked on cutting-edge enterprise hardware projects and played a key role in developing
-            industry-standard DMTF Redfish APIs. These APIs were designed for diagnosing issues, updating firmware, and
-            installing operating systems for Cisco UCS servers. My experience at Cisco marked my introduction to the
-            software field and the intricacies of systems.I found immense satisfaction in tackling technical
-            challenges and developed a keen interest in computer systems.
+            industry-standard
+            <a target="_blank" href="https://www.dmtf.org/standards/redfish">DMTF Redfish APIs</a>.
+            These APIs were designed for diagnosing issues, updating firmware, and
+            installing operating systems for
+            <a target="_blank"
+                href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">Cisco
+                UCS servers</a>.
+            My experience at Cisco marked my introduction to the software field and the intricacies of systems. I found
+            immense satisfaction in tackling technical challenges and developed a keen interest in computer systems.
             developed a fond interest in computer systems.
         </p>
         <p>
-            Before that, I did my Bachelor's in Computer Science at R. V. College of Engineering (RVCE) in
+            Before that, I did my Bachelor's in Computer Science at
+            <a target="_blank" href="https://rvce.edu.in">R. V. College of Engineering (RVCE)</a> in
             Bangalore, India. I worked with Prof. Rajashree Shettar, Prof. Minal Moharir, and Prof. Veena Gadad on
             the traffic decongestion system, HTTP3/QUIC protocol survey, and server firmware
-            management, respectively. Additionally, I was member of the entrepreneurship cell and a volunteer for
-            the Rotaract Club
-            of RVCE.
+            management, respectively. Additionally, I was member of the
+            <a target="_blank" href="https://ecellrvce.in">Entrepreneurship Cell</a> and a volunteer for
+            the Rotaract Club of RVCE.
         </p>
     </div>
 </body>
+
+<my-footer></my-footer>
 
 </html>
