--- a/index.html
+++ b/index.html
@@ -6,60 +6,63 @@
 <my-header title="Home"></my-header>
 
 <body class="body">
-    <div class="about-image">
-        <img class="profile-image" src="./assest/profile-image.jpg" alt="Profile Picture of Muteeb">
-        <div class="about-bio">
-            <strong>Muteeb Akram Nawaz Doctor</strong>
-            <br>
-            Graduate Student & Teaching Assistant
-            <br>
-            The University of Utah
-            <br>
-            <br>
-            <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a>
-            <br>
-            Salt Lake City, Utah, USA
+    <div class="page-content">
+        <div class="content-wrap">
+            <div class="about-image">
+                <img class="profile-image" src="./assest/profile-image.jpg" alt="Profile Picture of Muteeb">
+                <div class="about-bio">
+                    <strong>Muteeb Akram Nawaz Doctor</strong>
+                    <br>
+                    Graduate Student & Teaching Assistant
+                    <br>
+                    The University of Utah
+                    <br>
+                    <br>
+                    <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a>
+                    <br>
+                    Salt Lake City, Utah, USA
+                </div>
+            </div>
+            <div>
+                <p>
+                    I'm currently pursuing my graduate studies in computer science at the
+                    <a target="_blank" href="https://www.cs.utah.edu">Kahlert School of Computing</a>,
+                    <a target="_blank" href="https://www.utah.edu">University of Utah</a>. Under the guidance of
+                    <a target="_blank" href="https://users.cs.utah.edu/~vijay/index.html">Prof. Vijay Nagarajan</a>,
+                    my research focuses on re-imagining applications on CXL Memory. Additionally, I serve as a teaching
+                    assistant, supporting senior undergraduate students in their Capstone Project. My research interest
+                    lies in the intersection of hardware/software and multi-node systems, i.e., computer architecture,
+                    operating systems, and distributed systems.
+                </p>
+                <p>
+                    Before, I was part of the <a href="https://www.cisco.com/site/us/en/products/computing/index.html">
+                        Cloud & Compute</a> Team at <a href="https://www.cisco.com">Cisco Systems</a> in Bangalore,
+                    India. I started as a college intern and progressed to the role of Software Engineer 2 before
+                    leaving. During my time there, I worked on cutting-edge enterprise hardware projects and played a
+                    key role in developing industry-standard
+                    <a target="_blank" href="https://www.dmtf.org/standards/redfish">DMTF Redfish APIs</a>.
+                    These APIs were designed for diagnosing issues, updating firmware, and
+                    installing operating systems for
+                    <a target="_blank"
+                        href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">Cisco
+                        UCS servers</a>.
+                    My experience at Cisco marked my introduction to the software field and the intricacies of systems.
+                    I found immense satisfaction in tackling technical challenges and developed a keen interest in
+                    computer systems. developed a fond interest in computer systems.
+                </p>
+                <p>
+                    Before that, I did my Bachelor's in Computer Science at
+                    <a target="_blank" href="https://rvce.edu.in">R. V. College of Engineering (RVCE)</a> in
+                    Bangalore, India. I worked with Prof. Rajashree Shettar, Prof. Minal Moharir, and Prof. Veena Gadad
+                    on the traffic decongestion system, HTTP3/QUIC protocol survey, and server firmware
+                    management, respectively. Additionally, I was member of the
+                    <a target="_blank" href="https://ecellrvce.in">Entrepreneurship Cell</a> and a volunteer for
+                    the Rotaract Club of RVCE.
+                </p>
+            </div>
         </div>
-    </div>
-    <div>
-        <p>
-            I'm currently pursuing my graduate studies in computer science at the
-            <a target="_blank" href="https://www.cs.utah.edu">Kahlert School of Computing</a>,
-            <a target="_blank" href="https://www.utah.edu">University of Utah</a>. Under the guidance of
-            <a target="_blank" href="https://users.cs.utah.edu/~vijay/index.html">Prof. Vijay Nagarajan</a>,
-            my research focuses on re-imagining applications on CXL Memory. Additionally, I serve as a teaching
-            assistant, supporting senior undergraduate students in their Capstone Project. My research interest lies in
-            the intersection of hardware/software and multi-node systems, i.e., computer architecture, operating
-            systems, and distributed systems.
-        </p>
-        <p>
-            Before, I was part of the <a href="https://www.cisco.com/site/us/en/products/computing/index.html">
-                Cloud & Compute</a> Team at <a href="https://www.cisco.com">Cisco Systems</a> in Bangalore, India. I
-            started as a college intern and progressed to the role of Software Engineer 2 before leaving. During my time
-            there, I worked on cutting-edge enterprise hardware projects and played a key role in developing
-            industry-standard
-            <a target="_blank" href="https://www.dmtf.org/standards/redfish">DMTF Redfish APIs</a>.
-            These APIs were designed for diagnosing issues, updating firmware, and
-            installing operating systems for
-            <a target="_blank"
-                href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">Cisco
-                UCS servers</a>.
-            My experience at Cisco marked my introduction to the software field and the intricacies of systems. I found
-            immense satisfaction in tackling technical challenges and developed a keen interest in computer systems.
-            developed a fond interest in computer systems.
-        </p>
-        <p>
-            Before that, I did my Bachelor's in Computer Science at
-            <a target="_blank" href="https://rvce.edu.in">R. V. College of Engineering (RVCE)</a> in
-            Bangalore, India. I worked with Prof. Rajashree Shettar, Prof. Minal Moharir, and Prof. Veena Gadad on
-            the traffic decongestion system, HTTP3/QUIC protocol survey, and server firmware
-            management, respectively. Additionally, I was member of the
-            <a target="_blank" href="https://ecellrvce.in">Entrepreneurship Cell</a> and a volunteer for
-            the Rotaract Club of RVCE.
-        </p>
+        <my-footer></my-footer>
     </div>
 </body>
-
-<my-footer></my-footer>
 
 </html>
