--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
                     operating systems, and distributed systems.
                 </p>
                 <p>
-                    Before, I was part of the <a href="https://www.cisco.com/site/us/en/products/computing/index.html">
-                        Cloud & Compute</a> Team at <a href="https://www.cisco.com">Cisco Systems</a> in Bangalore,
-                    India. I started as a college intern and progressed to the role of Software Engineer 2 before
-                    leaving. During my time there, I worked on cutting-edge enterprise hardware projects and played a
-                    key role in developing industry-standard
+                    Before, I was part of the Cloud & Compute Team at <a href="https://www.cisco.com">Cisco Systems</a>
+                    in Bangalore, India. I started as a college intern and progressed to the role of Software Engineer 2
+                    before leaving. During my time there, I worked on cutting-edge enterprise hardware projects and
+                    played a key role in developing industry-standard
                     <a target="_blank" href="https://www.dmtf.org/standards/redfish">DMTF Redfish APIs</a>.
-                    These APIs were designed for diagnosing issues, updating firmware, and
-                    installing operating systems for
+                    These APIs were designed for diagnosing issues, updating firmware, and installing operating systems
+                    for
                     <a target="_blank"
                         href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">Cisco
                         UCS servers</a>.
@@ -58,6 +57,11 @@
                     management, respectively. Additionally, I was member of the
                     <a target="_blank" href="https://ecellrvce.in">Entrepreneurship Cell</a> and a volunteer for
                     the Rotaract Club of RVCE.
+                </p>
+                <p>
+                    I'm forever grateful to my mother, father, younger brother, sister, well-wishers, and teachers for
+                    their unconditional help, love, and support. The positive aspects of my life reflect their profound
+                    influence, while I take full responsibility for my any negative aspects.
                 </p>
             </div>
         </div>
