--- a/experience.html
+++ b/experience.html
@@ -12,9 +12,14 @@
                 <section class="company-title">Cisco Systems</section>
                 Jan 2020 - July 2023
                 <br>
-                Bangalore, India
+                mutnawaz@cisco.com
                 <br>
-                <p>mutnawaz@cisco.com</p>
+                <br>
+                3rd floor, BGL 17
+                <br>
+                Cessna Park, Bangalore, India
+                <br>
+                <br>
                 <section class="role-title">Software Engineer II</section>
                 <ul>
                     <li>Engineered a diagnostic tool for Cisco servers, enabling troubleshooting of CPUs, DIMMs, &
