--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,6 @@
 
 <body class="body">
     <div id="#projects">
-        Work in progress.
+        Work in progress. Checkout my <a target="_blank" href="https://github.com/muteebakram">Github</a>.
     </div>
 </body>
