--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                     Before, I was part of the Cloud & Compute Team at <a href="https://www.cisco.com">Cisco Systems</a>
                     in Bangalore, India. I started as a college intern and progressed to the role of Software Engineer 2
                     before leaving. During my time there, I worked on cutting-edge enterprise hardware projects and
-                    played a key role in developing industry-standard
+                    implemented industry-standard
                     <a target="_blank" href="https://www.dmtf.org/standards/redfish">DMTF Redfish APIs</a>.
-                    These APIs were designed for diagnosing issues, updating firmware, and installing operating systems
+                    Using these APIs, I developed solutions for diagnosing issues, updating firmware, and installing operating systems
                     for
                     <a target="_blank"
                         href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">Cisco
                         UCS servers</a>.
                     My experience at Cisco marked my introduction to the software field and the intricacies of systems.
                     I found immense satisfaction in tackling technical challenges and developed a keen interest in
-                    computer systems. developed a fond interest in computer systems.
+                    computer systems.
                 </p>
                 <p>
                     Before that, I did my Bachelor's in Computer Science at
