--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                 <p>
                     Before, I was part of the Cloud & Compute Team at <a href="https://www.cisco.com">Cisco Systems</a>
                     in Bangalore, India. I started as a college intern and progressed to the role of Software Engineer 2
-                    before leaving. During my time there, I worked on cutting-edge enterprise hardware projects and
+                    before leaving. During my time there, I worked on cutting-edge enterprise hardware and
                     implemented industry-standard
                     <a target="_blank" href="https://www.dmtf.org/standards/redfish">DMTF Redfish APIs</a>.
-                    Using these APIs, I developed solutions for diagnosing issues, updating firmware, and installing operating systems
-                    for
+                    Using these APIs, I developed solutions for diagnosing hardware, updating firmware, disk data
+                    sanitization, and installing operating systems for
                     <a target="_blank"
                         href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">Cisco
                         UCS servers</a>.
-                    My experience at Cisco marked my introduction to the software field and the intricacies of systems.
-                    I found immense satisfaction in tackling technical challenges and developed a keen interest in
+                    My experience at Cisco marked my introduction to the software and the intricacies of systems.
+                    I found immense satisfaction in tackling technical challenges here and developed a keen interest in
                     computer systems.
                 </p>
                 <p>
