--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,8 @@
                 India, 2022, pp. 378-385, doi: 10.1109/ICOEI53556.2022.9777199.
                 <br>
                 <i>Pratiksha Narasimha Nayak G; Nimisha Dey; Neha N; Malavika Hariprasad; Sandhya S; Minal Moharir;
-                    <strong>Muteeb Akram</strong></i>
+                    <strong>Muteeb Akram</strong>
+                </i>
             </li>
             <br>
             <li>
@@ -27,9 +28,9 @@
                 <br>
                 May 2020, International Research Journal of Engineering and Technology (IRJET)
                 <br>
-                <i><strong>Muteeb Akram Nawaz</strong>, Veena Gadad (Dept. of Computer Science and Engineering, R V
-                    College of
-                    Engineering, Karnataka, India)</i>
+                <i><strong>Muteeb Akram Nawaz</strong>, Veena Gadad (Dept. of Computer Science and Engineering,
+                    R V College of Engineering, Karnataka, India)
+                </i>
                 <br>
                 ( <a href="https://www.dmtf.org/about/academicalliance#redfish">DMTF Mention</a> )
             </li>
