--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
 
 <body class="body">
     <div id="contact">
+        Feel free to reach out to me on any of the platforms.
+        <br>
         <ul>
             <li>Email: <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
             <li>Github: <a href="https://github.com/muteebakram">github.com/muteebakram</a></li>
@@ -15,6 +17,6 @@
                     href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
             </li>
         </ul>
-        If you search extensively, you'll discover my presence on Twitter and Instagram.
+        If you search extensively, you'll discover my presence on Twitter and Instagram. Did you find me?
     </div>
 </body>
