Completed projects page. Uff

--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
         Feel free to reach out to me on any of the platforms.
         <br>
         <ul>
-            <li>Email: <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
-            <li>Github: <a href="https://github.com/muteebakram">github.com/muteebakram</a></li>
-            <li>LinkedIn: <a href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a></li>
-            <li>Google Scholar: <a
+            <li style="padding: 6px 0;">Email: <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
+            <li style="padding: 6px 0;">Github: <a href="https://github.com/muteebakram">github.com/muteebakram</a></li>
+            <li style="padding: 6px 0;">LinkedIn: <a href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a></li>
+            <li style="padding: 6px 0;">Google Scholar: <a
                     href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
             </li>
         </ul>
