--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
                     R V College of Engineering, Karnataka, India)
                 </i>
                 <br>
-                ( <a href="https://www.dmtf.org/about/academicalliance#redfish">DMTF Mention</a> )
+                ( <a href="https://www.dmtf.org/about/academicalliance#redfish">DMTF Recognition</a> )
             </li>
         </ol>
     </div>
