--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <a target="_blank" href="https://www.utah.edu">University of Utah</a>. Under the guidance of
                     <a target="_blank" href="https://users.cs.utah.edu/~vijay/index.html">Prof. Vijay Nagarajan</a>,
                     my research focuses on re-imagining applications on CXL Memory. Additionally, I serve as a teaching
-                    assistant, supporting senior undergraduate students in their Capstone Project. My research interest
-                    lies in the intersection of hardware/software and multi-node systems, i.e., computer architecture,
-                    operating systems, and distributed systems.
+                    assistant, supporting senior undergraduate students in their capstone project. My research interest
+                    lies in the intersection of hardware/software of Computer Systems, i.e., computer architecture,
+                    operating systems, distributed, and embedded systems.
                 </p>
                 <p>
                     Before, I was part of the Cloud & Compute Team at <a href="https://www.cisco.com">Cisco Systems</a>
