Add University images

--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
 
 <body class="body">
     <div id="education">
-        <div>
+        <div class="education-section">
             <div>
                 <section class="education-title">Kahlert School of Computing, The University of Utah</section>
                 <section class="degree-title">Master of Science, Computer Science</section>
@@ -17,7 +17,11 @@
                 <br>
                 <p>u1471482@umail.utah.edu</p>
             </div>
-            <br>
+            <img class="education-image" src="./assest/uofu.jpeg" alt="The University of Utah U Statue.">
+        </div>
+        <br>
+        <br>
+        <div class="education-section">
             <div>
                 <section class="education-title">R. V. College of Engineering (RVCE)</section>
                 <section class="degree-title">Bachelor of Engineering, Computer Science & Engineering</section>
@@ -27,7 +31,11 @@
                 <br>
                 <p>muteeban.cs16@rvce.edu.in</p>
             </div>
-            <br>
+            <img class="education-image" src="./assest/rvce.jpg" alt="RVCE Front Entrance.">
+        </div>
+        <br>
+        <br>
+        <div class="education-section">
             <div>
                 <section class="education-title">Deeksha Reva Independent PU College</section>
                 <section class="degree-title">Pre-University Education, Computer Science</section>
@@ -35,7 +43,11 @@
                 <br>
                 Yelahanka, Bangalore, Karnataka, India
             </div>
-            <br>
+            <img class="education-image" src="./assest/reva.jpeg" alt="Reva PUC Building">
+        </div>
+        <br>
+        <br>
+        <div class="education-section">
             <div>
                 <section class="education-title">Deepayan Secondary School</section>
                 <section class="degree-title">Kinder Garden, Primary, and High School</section>
@@ -43,7 +55,10 @@
                 <br>
                 NC Colony, Hospet, Karnataka, India
             </div>
+            <img class="education-image" src="./assest/deepayan.jpeg" alt="Deepayan Secondary School Building & Ground">
         </div>
+        <br>
+        <br>
     </div>
 
 </body>
