Update last updated

--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,13 @@
 
 <body class="body">
     <div id="contact">
-        Feel free to reach out to me on any of the platforms.
-        <br>
+        <p>Hello there! Thanks for stopping by.</p>
+        <p>Feel free to reach out to me on any of the platforms.</p>
         <ul>
             <li style="padding: 6px 0;">Email: <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
             <li style="padding: 6px 0;">Github: <a href="https://github.com/muteebakram">github.com/muteebakram</a></li>
-            <li style="padding: 6px 0;">LinkedIn: <a href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a></li>
+            <li style="padding: 6px 0;">LinkedIn: <a
+                    href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a></li>
             <li style="padding: 6px 0;">Google Scholar: <a
                     href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
             </li>
