Add Projects filters with custom multi-select, Add margin, More project description, Education pictures

--- a/contact.html
+++ b/contact.html
@@ -7,25 +7,21 @@
 
 <body class="body">
     <div id="contact">
-        <p>Hello there! Thanks for stopping by.</p>
+        <p>Hello there!</p>
         <p>Feel free to reach out to me on any of the platforms.</p>
         <ul>
-            <li style="padding: 6px 0;">
-                Email: <a target="_blank" href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a>
-            </li>
-            <li style="padding: 6px 0;">
-                Github: <a target="_blank" href="https://github.com/muteebakram">github.com/muteebakram</a>
-            </li>
-            <li style="padding: 6px 0;">
+            <li>Email: <a target="_blank" href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
+            <li>Github: <a target="_blank" href="https://github.com/muteebakram">github.com/muteebakram</a></li>
+            <li>
                 LinkedIn:
                 <a target="_blank" href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a>
             </li>
-            <li style="padding: 6px 0;">
+            <li>
                 Google Scholar:
                 <a target="_blank"
                     href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
             </li>
         </ul>
-        If you search extensively, you'll discover my presence on Twitter and Instagram. Did you find me?
+        Thanks for stopping by.
     </div>
 </body>
