--- a/education.html
+++ b/education.html
@@ -17,7 +17,7 @@
                 <br>
                 <p>u1471482@umail.utah.edu</p>
             </div>
-            <img class="education-image" src="./assest/uofu.jpeg" alt="The University of Utah U Statue.">
+            <img class="education-image" src="./assets/uofu.jpeg" alt="The University of Utah U Statue.">
         </div>
         <br>
         <br>
@@ -31,7 +31,7 @@
                 <br>
                 <p>muteeban.cs16@rvce.edu.in</p>
             </div>
-            <img class="education-image" src="./assest/rvce.jpg" alt="RVCE Front Entrance.">
+            <img class="education-image" src="./assets/rvce.jpg" alt="RVCE Front Entrance.">
         </div>
         <br>
         <br>
@@ -43,7 +43,7 @@
                 <br>
                 Yelahanka, Bangalore, Karnataka, India
             </div>
-            <img class="education-image" src="./assest/reva.jpeg" alt="Reva PUC Building">
+            <img class="education-image" src="./assets/reva.jpeg" alt="Reva PUC Building">
         </div>
         <br>
         <br>
@@ -55,7 +55,7 @@
                 <br>
                 NC Colony, Hospet, Karnataka, India
             </div>
-            <img class="education-image" src="./assest/deepayan.jpeg" alt="Deepayan Secondary School Building & Ground">
+            <img class="education-image" src="./assets/deepayan.jpeg" alt="Deepayan Secondary School Building & Ground">
         </div>
         <br>
         <br>
