--- a/experience.html
+++ b/experience.html
@@ -62,15 +62,15 @@
             </div>
             <div class="company-images">
                 <figure>
-                    <img class="company-image" src="./assest/cisco0.png" alt="Cisco Onboarding">
+                    <img class="company-image" src="./assets/cisco0.png" alt="Cisco Onboarding">
                     <figcaption>Cisco Internship Onboarding</figcaption>
                 </figure>
                 <figure>
-                    <img class="company-image" src="./assest/cisco1.png" alt="Cisco Team Outing">
+                    <img class="company-image" src="./assets/cisco1.png" alt="Cisco Team Outing">
                     <figcaption>Cisco Team Outing</figcaption>
                 </figure>
                 <figure>
-                    <img class="company-image" src="./assest/cisco2.png" alt="Cisco Last Working Day">
+                    <img class="company-image" src="./assets/cisco2.png" alt="Cisco Last Working Day">
                     <figcaption>Cisco Last Working Day</figcaption>
                 </figure>
             </div>
