--- a/projects.html
+++ b/projects.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <script type="module" src="script.js"></script>
+<script type="module" src="multi-select-dropdown.js"></script>
 
 <my-header title="Projects"></my-header>
 
 <body class="body">
     <div id="#projects">
-        <my-projects></my-projects>
+        <my-filters></my-filters>
+        <my-projects projects></my-projects>
     </div>
 </body>
