--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <a target="_blank"
                         href="https://www.cisco.com/site/us/en/products/computing/servers-unified-computing-systems/index.html">
                         Cisco UCS servers</a>.
-                    My experience at Cisco marked my introduction to the software and the intricacies of systems.
-                    I found immense satisfaction in tackling technical challenges and developed a keen interest in
+                    My experience at Cisco marked my introduction to the software industry.
+                    I found immense joy in tackling technical challenges and developed a keen interest in
                     systems.
                 </p>
                 <p>
@@ -67,16 +67,15 @@
                 <p>
                     Before RVCE, I did my pre-university education with Deeksha Integrated Learning at
                     <a target="_blank" href="https://www.revapucollege.edu.in/yelahanka/about-yelahanka">
-                        Reva Independent PU College.</a> It is here where I learned how to study and the importance of
+                        Reva Independent PU College</a>, Bangalore, India. It is here where I learned how to study and the importance of
                     education and hard work. The passion and support of the teachers here truly inspired me.
                 </p>
                 <p>
-                    It all started at <a target="_blank" href="https://deepayanschool.com">Deepayan School</a>, Hospet.
+                    It all started at <a target="_blank" href="https://deepayanschool.com">Deepayan School</a>, Hospet, India.
                 </p>
                 <p>
                     I'm forever grateful to my mother, father, younger brother, sister, well-wishers, and teachers for
-                    their unconditional love, guidance, and support. The positive aspects of my life reflect their profound
-                    influence, while I take full responsibility for my negative aspects.
+                    their unconditional love, guidance, and support.
                 </p>
             </div>
         </div>
