--- a/experience.html
+++ b/experience.html
@@ -6,11 +6,51 @@
 <my-header title="Experience"></my-header>
 
 <body class="body">
-    <div id="#experience">
-        <div class="company">
+    <div>
+        <a href="#current">Current</a>&nbsp; | &nbsp;
+        <!-- <a href="#research">Research</a>&nbsp; | &nbsp; -->
+        <!-- <a href="#teaching">Teaching</a>&nbsp; | &nbsp; -->
+        <a href="#previous">Previous</a> - <a href="#cisco">Cisco</a>&nbsp; | &nbsp;
+        <a href="#internships">Internships</a> - <a href="#cisco-internship">Cisco</a>
+        <br>
+        <br>
+    </div>
+    <div id="current">
+        <section class="experience-title">Current</section>
+    </div>
+    <hr class="hr">
+    <div id="research">
+        <section class="experience-title">Research</section>
+        <section class="company-title">University of Utah</section>
+        <section style="padding: 6px 0;"><i>Spring 2024: CS6950 Independent Study</i></section>
+        <section style="padding: 8px 0 0 0;">Prof. Vijay Nagarajan</section>
+        <ul>
+            <li>
+                New distributed scheduler for disaggregated memory like CXL, RDMA, etc.
+            </li>
+        </ul>
+    </div>
+    <!-- <hr class="hr"> -->
+    <div id="teaching">
+        <section class="experience-title">Teaching</section>
+        <section class="company-title">University of Utah</section>
+        <section style="padding: 6px 0;"><i>Spring 2024: CS4500 Senior Capstone Design</i></section>
+        <section style="padding: 6px 0;"><i>Fall 2023: CS4000 Senior Capstone Design</i></section>
+        <section style="padding: 8px 0 0 0;">Prof. Jim de st Germain, Prof. David Bean, and Prof. Aaron Wood</section>
+        <ul>
+            <li>
+                Mentoring a class of 160 senior undergraduate students on their project ideation, design,
+                development, and deployment.
+            </li>
+        </ul>
+    </div>
+    <hr class="hr">
+    <div id="previous">
+        <section class="experience-title">Previous</section>
+        <div class="company" id="cisco">
             <div>
                 <section class="company-title">Cisco Systems</section>
-                Jan 2020 - July 2023
+                Aug 2020 - July 2023
                 <br>
                 mutnawaz@cisco.com
                 <br>
@@ -26,8 +66,12 @@
                         PCIe devices. Achieved 40% reduction in downtime & 10% decrease in RMA costs, streamlining
                         debugging for TAC.
                     </li>
-                    <li>Worked on Baseboard Management Controller to streamline low-level firmware and BIOS update,
-                        resulting in a 15% reduction in system downtime and improved system stability.
+                    <li>Designed a Data Sanitization framework & Redfish APIs to fully wipe data from storage controllers, NVMe &
+                        disks.
+                    </li>
+                    <li>Owned and revamped Cisco firmware application front-end with web components and integrated
+                        12+ back-end APIs. Shipped the application in a customized Linux container, offering CLI,
+                        UI, & Redfish REST APIs interfaces.
                     </li>
                     <li>Implemented thread synchronization to concurrently install operating systems and update the
                         firmware of 100+ Cisco UCS servers at once.
@@ -35,24 +79,11 @@
                 </ul>
                 <section class="role-title">Software Engineer</section>
                 <ul>
-                    <li>Designed a Data Sanitization framework to fully wipe data from storage controllers, NVMe &
-                        disks.
+                    <li>Worked on Baseboard Management Controller to streamline low-level firmware and BIOS update,
+                        resulting in a 15% reduction in system downtime and improved system stability.
                     </li>
                     <li>Migrate from legacy build systems to container-based CI/CD builds utilizing runC and
                         dockerd runtime engines, resulting in a notable 20% acceleration in build times.
-                    </li>
-                    <li>Owned and revamped Cisco firmware application front-end with web components and integrated
-                        12+ back-end APIs. Shipped the application in a customized Linux container, offering CLI,
-                        UI, & REST interfaces.
-                    </li>
-                </ul>
-                <section class="role-title">Software Engineer Intern</section>
-                <ul>
-                    <li>
-                        Developed 3 new industry-standard Redfish APIs for firmware discovery, update, & monitoring.
-                    </li>
-                    <li>
-                        Ported 7,000+ source code from Python2 to Python3 with no performance impact.
                     </li>
                     <li>Owned and maintained Cisco Inventory Portal by automating source check-ins, creating
                         SSH key-pairs, and optimizing large NFS storage, resulting in a 30% reduction in
@@ -62,18 +93,39 @@
             </div>
             <div class="company-images">
                 <figure>
-                    <img class="company-image" src="./assets/cisco0.png" alt="Cisco Onboarding">
-                    <figcaption>Cisco Internship Onboarding</figcaption>
-                </figure>
-                <figure>
                     <img class="company-image" src="./assets/cisco1.png" alt="Cisco Team Outing">
-                    <figcaption>Cisco Team Outing</figcaption>
+                    <figcaption>Cisco First Team Outing. Aug 26, 2022.</figcaption>
                 </figure>
                 <figure>
                     <img class="company-image" src="./assets/cisco2.png" alt="Cisco Last Working Day">
-                    <figcaption>Cisco Last Working Day</figcaption>
+                    <figcaption>Cisco Last Working Day. Jul 20, 2023.</figcaption>
                 </figure>
             </div>
+        </div>
+    </div>
+    <hr class="hr">
+    <div id="internships">
+        <section class="experience-title">Internships</section>
+        <section class="company-title" id="cisco-internship">Cisco Systems</section>
+        Jan 2020 - Jun 2020
+        <br>
+        mutnawaz@cisco.com
+        <br>
+        <br>
+        <section class="role-title">Software Engineer Intern</section>
+        <ul>
+            <li>
+                Developed 3 new industry-standard Redfish APIs for firmware discovery, update, & monitoring.
+            </li>
+            <li>
+                Ported 7,000+ source code from Python2 to Python3 with no performance impact.
+            </li>
+        </ul>
+        <div class="company-images">
+            <figure>
+                <img class="company-image" src="./assets/cisco0.png" alt="Cisco Onboarding">
+                <figcaption>Cisco Internship Onboarding. Jan 16, 2020.</figcaption>
+            </figure>
         </div>
     </div>
 </body>
