Add Dark Theme, update link css

--- a/experience.html
+++ b/experience.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script type="module" src="script.js"></script>
-
+<script defer type="module" src="script.js"></script>
 <my-header title="Experience"></my-header>
 
 <body class="body">
@@ -39,7 +38,7 @@
         <section style="padding: 8px 0 0 0;">Prof. Jim de st Germain, Prof. David Bean, and Prof. Aaron Wood</section>
         <ul>
             <li>
-                Mentoring a class of 160 senior undergraduate students on their project ideation, design,
+                Mentoring a class of 160 senior undergraduates in their project ideation, design,
                 development, and deployment.
             </li>
         </ul>
@@ -66,8 +65,8 @@
                         PCIe devices. Achieved 40% reduction in downtime & 10% decrease in RMA costs, streamlining
                         debugging for TAC.
                     </li>
-                    <li>Designed a Data Sanitization framework & Redfish APIs to fully wipe data from storage controllers, NVMe &
-                        disks.
+                    <li>Designed a Data Sanitization framework & Redfish APIs to fully wipe data from storage
+                        controllers, NVMe & disks.
                     </li>
                     <li>Owned and revamped Cisco firmware application front-end with web components and integrated
                         12+ back-end APIs. Shipped the application in a customized Linux container, offering CLI,
