--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <script type="module" src="script.js"></script>
-
 <my-header title="Home"></my-header>
 
 <body class="body">
@@ -67,11 +65,13 @@
                 <p>
                     Before RVCE, I did my pre-university education with Deeksha Integrated Learning at
                     <a target="_blank" href="https://www.revapucollege.edu.in/yelahanka/about-yelahanka">
-                        Reva Independent PU College</a>, Bangalore, India. It is here where I learned how to study and the importance of
+                        Reva Independent PU College</a>, Bangalore, India. It is here where I learned how to study and
+                    the importance of
                     education and hard work. The passion and support of the teachers here truly inspired me.
                 </p>
                 <p>
-                    It all started at <a target="_blank" href="https://deepayanschool.com">Deepayan School</a>, Hospet, India.
+                    It all started at <a target="_blank" href="https://deepayanschool.com">Deepayan School</a>, Hospet,
+                    India.
                 </p>
                 <p>
                     I'm forever grateful to my mother, father, younger brother, sister, well-wishers, and teachers for
