--- a/education.html
+++ b/education.html
@@ -7,7 +7,7 @@
 <body class="body">
     <div id="education">
         <div class="education-section">
-            <div>
+            <div class="education-text">
                 <section class="education-title">Kahlert School of Computing, The University of Utah</section>
                 <section class="degree-title">Master of Science, Computer Science</section>
                 <section class="education-subtitle">
@@ -27,7 +27,7 @@
         <br>
         <br>
         <div class="education-section">
-            <div>
+            <div class="education-text">
                 <section class="education-title">R. V. College of Engineering (RVCE)</section>
                 <section class="degree-title">Bachelor of Engineering, Computer Science & Engineering</section>
                 <section class="education-subtitle">
@@ -47,7 +47,7 @@
         <br>
         <br>
         <div class="education-section">
-            <div>
+            <div class="education-text">
                 <section class="education-title">Deeksha Reva Independent PU College</section>
                 <section class="degree-title">Pre-University Education, Computer Science</section>
                 <section class="education-subtitle">
@@ -64,7 +64,7 @@
         <br>
         <br>
         <div class="education-section">
-            <div>
+            <div class="education-text">
                 <section class="education-title">Deepayan Secondary School</section>
                 <section class="degree-title">Kinder Garden, Primary, and High School</section>
                 <section class="education-subtitle">
