Small UI improvements

--- a/education.html
+++ b/education.html
@@ -19,7 +19,7 @@
                     u1471482@umail.utah.edu
                 </section>
             </div>
-            <figure style="margin: 0;">
+            <figure style="margin: 0; height: 100%">
                 <img class="education-image" src="./assets/uofu.jpeg" alt="The University of Utah U Statue.">
                 <figcaption>Famous U Statue.</figcaption>
             </figure>
@@ -39,7 +39,7 @@
                     muteeban.cs16@rvce.edu.in
                 </section>
             </div>
-            <figure style="margin: 0;">
+            <figure style="margin: 0; height: 100%">
                 <img class="education-image" src="./assets/rvce.jpg" alt="RVCE Front Entrance.">
                 <figcaption>RVCE Front Gate. ID card is mandatory!</figcaption>
             </figure>
@@ -56,7 +56,7 @@
                     Yelahanka, Bangalore, Karnataka, India
                 </section>
             </div>
-            <figure style="margin: 0;">
+            <figure style="margin: 0; height: 100%">
                 <img class="education-image" src="./assets/reva.jpeg" alt="Reva PUC Building">
                 <figcaption>Reva PUC building has nice proverbs.</figcaption>
             </figure>
@@ -73,10 +73,10 @@
                     NC Colony, Hospet, Karnataka, India
                 </section>
             </div>
-            <figure style="margin: 0;">
+            <figure style="margin: 0; height: 100%">
                 <img class="education-image" src="./assets/deepayan.jpeg"
                     alt="Deepayan Secondary School Building & Ground">
-                <figcaption>Deepayan new building 2014 & ground.</figcaption>
+                <figcaption>Deepayan new building & ground. 2011</figcaption>
             </figure>
         </div>
         <br>
