--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
             </div>
             <div class="about-text">
                 <p>
-                    I'm pursuing my graduate studies in computer science at the
+                    I'm pursuing graduate studies in Computer Science at the
                     <a target="_blank" href="https://www.cs.utah.edu">Kahlert School of Computing</a>,
-                    <a target="_blank" href="https://www.utah.edu">University of Utah</a>. Under the guidance of
-                    <a target="_blank" href="https://users.cs.utah.edu/~vijay/index.html">Prof. Vijay Nagarajan</a>,
+                    <a target="_blank" href="https://www.utah.edu">University of Utah</a>.
+                    My research interest lies in the intersection of hardware/software of computer systems, i.e.,
+                    computer architecture, operating systems, distributed systems, and embedded systems. Under the
+                    guidance of <a target="_blank" href="https://users.cs.utah.edu/~vijay/index.html">
+                        Prof. Vijay Nagarajan</a>,
                     my research focuses on re-imagining applications on CXL Memory. Additionally, I serve as a teaching
-                    assistant, helping senior undergraduate students in their capstone projects. My research interest
-                    lies in the intersection of hardware/software of computer systems, i.e., computer architecture,
-                    operating systems, distributed systems, and embedded systems.
+                    assistant, helping senior undergraduate students in their capstone projects.
                 </p>
                 <p>
                     Before Utah, I was part of the Cloud & Compute Team at <a href="https://www.cisco.com">Cisco
