--- a/publications.html
+++ b/publications.html
@@ -16,12 +16,12 @@
                 </section>
                 2022 6th International Conference on Trends in Electronics and Informatics (ICOEI), Tirunelveli,
                 India, 2022, pp. 378-385, doi: 10.1109/ICOEI53556.2022.9777199.
-                <br>
-                <i>Pratiksha Narasimha Nayak G; Nimisha Dey; Neha N; Malavika Hariprasad; Sandhya S; Minal Moharir;
-                    <strong>Muteeb Akram</strong>
-                </i>
+                <section class="paper-authors">
+                    <i>Pratiksha Narasimha Nayak G; Nimisha Dey; Neha N; Malavika Hariprasad; Sandhya S; Minal Moharir;
+                        <strong>Muteeb Akram</strong>
+                    </i>
+                </section>
             </li>
-            <br>
             <li>
                 <section class="paper-title">
                     <a target="_blank" href="https://www.irjet.net/archives/V7/i5/IRJET-V7I51018.pdf">
@@ -29,10 +29,11 @@
                     </a>
                 </section>
                 May 2020, International Research Journal of Engineering and Technology (IRJET)
-                <br>
-                <i><strong>Muteeb Akram Nawaz</strong>, Veena Gadad (Dept. of Computer Science and Engineering,
-                    R V College of Engineering, Karnataka, India)
-                </i>
+                <section class="paper-authors">
+                    <i><strong>Muteeb Akram Nawaz</strong>, Veena Gadad (Dept. of Computer Science and Engineering,
+                        R V College of Engineering, Karnataka, India)
+                    </i>
+                </section>
                 <section class="paper-subsection">
                     [ <a href="https://www.dmtf.org/about/academicalliance#redfish">DMTF Redfish Recognition</a> ]
                 </section>
