--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,18 @@
 
 <body class="body">
     <div id="contact">
-        <p>Hello there!</p>
+        <p style="padding: 6px 0 0 0;">Hello there!</p>
         <p>Feel free to reach out to me on any of the platforms.</p>
         <ul>
             <li>Email: <a target="_blank" href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
             <li>Github: <a target="_blank" href="https://github.com/muteebakram">github.com/muteebakram</a></li>
             <li>
+                Twitter:
+                <a target="_blank" href="https://www.twitter.com/muteeb_akram/">twitter.com/muteeb_akram</a>
+            </li>
+            <li>
                 LinkedIn:
-                <a target="_blank" href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a>
+                <a target="_blank" href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram</a>
             </li>
             <li>
                 Google Scholar:
@@ -21,6 +25,6 @@
                     href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
             </li>
         </ul>
-        Thanks for stopping by.
+        <p>Thanks for stopping by.</p>
     </div>
 </body>
