--- a/experience.html
+++ b/experience.html
@@ -6,11 +6,11 @@
 
 <body class="body">
     <div>
-        <a href="#current">Current</a>&nbsp; | &nbsp;
+        <a href="#current">Current</a> :: <a href="#research">Research</a> : <a href="#teaching">Teaching</a> &nbsp; | &nbsp;
         <!-- <a href="#research">Research</a>&nbsp; | &nbsp; -->
         <!-- <a href="#teaching">Teaching</a>&nbsp; | &nbsp; -->
-        <a href="#previous">Previous</a> - <a href="#cisco">Cisco</a>&nbsp; | &nbsp;
-        <a href="#internships">Internships</a> - <a href="#cisco-internship">Cisco</a>
+        <a href="#previous">Previous</a> :: <a href="#cisco">Cisco</a>&nbsp; | &nbsp;
+        <a href="#internships">Internships</a> :: <a href="#cisco-internship">Cisco</a>
         <br>
         <br>
     </div>
@@ -33,7 +33,7 @@
     <div id="teaching">
         <section class="experience-title">Teaching</section>
         <section class="company-title">University of Utah</section>
-        <section style="padding: 6px 0;"><i>Spring 2024: CS4500 Senior Capstone Design</i></section>
+        <section style="padding: 6px 0;"><i>Spring 2024: CS4500 Senior Capstone Project</i></section>
         <section style="padding: 6px 0;"><i>Fall 2023: CS4000 Senior Capstone Design</i></section>
         <section style="padding: 8px 0 0 0;">Prof. Jim de st Germain, Prof. David Bean, and Prof. Aaron Wood</section>
         <ul>
